--- a/index.html
+++ b/index.html
@@ -1,13 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>معین میرسعیدی | Moein Mirsaeedi</title>
-    <link rel="stylesheet" href="styles/main.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
+    <div class="container-fluid p-0 body-site">
+      <!-- Home page --------->
+      <div class="container-fluid p-0 pages-site home-page">
+        <div>
+          <div class="row m-0">
+            <div class="col-md-2">
+              <div class="progress-side"></div>
+            </div>
+            <div class="col-md-10"></div>
+          </div>
+        </div>
+      </div>
+
+      <!-- About me page --------->
+      <div class="container-fluid p-0 pages-site about-page">
+        <div>
+          <div class="row m-0">
+            <div class="col-md-2">
+              <div class="progress-side"></div>
+            </div>
+            <div class="col-md-10"></div>
+          </div>
+        </div>
+      </div>
+
+      <!-- My service page --------->
+      <div class="container-fluid p-0 pages-site service-page">
+        <div>
+          <div class="row m-0">
+            <div class="col-md-2">
+              <div class="progress-side"></div>
+            </div>
+            <div class="col-md-10"></div>
+          </div>
+        </div>
+      </div>
+
+      <!-- My skills page --------->
+      <div class="container-fluid p-0 pages-site skills-page">
+        <div>
+          <div class="row m-0">
+            <div class="col-md-2">
+              <div class="progress-side"></div>
+            </div>
+            <div class="col-md-10"></div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Contact me page --------->
+      <div class="container-fluid p-0 pages-site contact-page">
+        <div>
+          <div class="row m-0">
+            <div class="col-md-2">
+              <div class="progress-side"></div>
+            </div>
+            <div class="col-md-10"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="scripts/main.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="styles/main.css" />
   </body>
 </html>
