--- a/index.html
+++ b/index.html
@@ -15,61 +15,126 @@
   <body>
     <div class="container-fluid p-0 body-site">
       <!-- Home page --------->
-      <div class="container-fluid p-0 pages-site home-page">
+
+      <div class="container-fluid p-0 pages-site home-page" id="home-page">
         <div>
-          <div class="row m-0">
-            <div class="col-md-2">
+          <div class="container-fluid row-2">
+            <nav class="navbar navbar-expand-md navbar-dark fixed-top">
+              <div class="container-fluid">
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#mynavbar"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="mynavbar">
+                  <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                      <a class="nav-link text-light mt-1" href="#home-page"
+                        >Home</a
+                      >
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-light mt-1" href="#about-page"
+                        >About me</a
+                      >
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-light mt-1" href="#service-page"
+                        >My service</a
+                      >
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-light mt-1" href="#skills-page"
+                        >My skills</a
+                      >
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-light mt-1" href="#contact-page"
+                        >Contact me</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+
+            <!-- <ul class="ul-menu menu-des">
+              <li class="item-ul">Home</li>
+              <li class="item-ul">About me</li>
+              <li class="item-ul">My service</li>
+              <li class="item-ul">My skills</li>
+              <li class="item-ul">Contact me</li>
+            </ul>
+            <ul class="ul-menu menu-ham">
+              <div>
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
+            </ul> -->
+          </div>
+          <div class="row row-10 m-0">
+            <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-md-10"></div>
+            <div class="col-10"></div>
           </div>
         </div>
       </div>
 
       <!-- About me page --------->
-      <div class="container-fluid p-0 pages-site about-page">
+      <div class="container-fluid p-0 pages-site about-page" id="about-page">
         <div>
           <div class="row m-0">
-            <div class="col-md-2">
+            <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-md-10"></div>
+            <div class="col-10"></div>
           </div>
         </div>
       </div>
 
       <!-- My service page --------->
-      <div class="container-fluid p-0 pages-site service-page">
+      <div
+        class="container-fluid p-0 pages-site service-page"
+        id="service-page"
+      >
         <div>
           <div class="row m-0">
-            <div class="col-md-2">
+            <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-md-10"></div>
+            <div class="col-10"></div>
           </div>
         </div>
       </div>
 
       <!-- My skills page --------->
-      <div class="container-fluid p-0 pages-site skills-page">
+      <div class="container-fluid p-0 pages-site skills-page" id="skills-page">
         <div>
           <div class="row m-0">
-            <div class="col-md-2">
+            <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-md-10"></div>
+            <div class="col-10"></div>
           </div>
         </div>
       </div>
 
       <!-- Contact me page --------->
-      <div class="container-fluid p-0 pages-site contact-page">
+      <div
+        class="container-fluid p-0 pages-site contact-page"
+        id="contact-page"
+      >
         <div>
           <div class="row m-0">
-            <div class="col-md-2">
+            <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-md-10"></div>
+            <div class="col-10"></div>
           </div>
         </div>
       </div>
