--- a/index.html
+++ b/index.html
@@ -19,62 +19,20 @@
       <div class="container-fluid p-0 pages-site home-page" id="home-page">
         <div>
           <div class="container-fluid row-2">
-            <nav class="navbar navbar-expand-md navbar-dark fixed-top">
-              <div class="container-fluid">
-                <button
-                  class="navbar-toggler"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#mynavbar"
-                >
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="mynavbar">
-                  <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
-                      <a class="nav-link text-light mt-1" href="#home-page"
-                        >Home</a
-                      >
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link text-light mt-1" href="#about-page"
-                        >About me</a
-                      >
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link text-light mt-1" href="#service-page"
-                        >My service</a
-                      >
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link text-light mt-1" href="#skills-page"
-                        >My skills</a
-                      >
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link text-light mt-1" href="#contact-page"
-                        >Contact me</a
-                      >
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </nav>
-
-            <!-- <ul class="ul-menu menu-des">
-              <li class="item-ul">Home</li>
-              <li class="item-ul">About me</li>
-              <li class="item-ul">My service</li>
-              <li class="item-ul">My skills</li>
-              <li class="item-ul">Contact me</li>
+            <ul class="menu-nav col des-menu">
+              <li class="menu-items"><a href="#home-page">Home</a></li>
+              <li class="menu-items"><a href="#about-page">About me</a></li>
+              <li class="menu-items"><a href="#service-page">My service</a></li>
+              <li class="menu-items"><a href="#skills-page">My skills</a></li>
+              <li class="menu-items"><a href="#contact-page">Contact me</a></li>
             </ul>
-            <ul class="ul-menu menu-ham">
-              <div>
+            <ul class="menu-nav col mobile-menu">
+              <div class="ham-menu">
                 <span></span>
                 <span></span>
                 <span></span>
               </div>
-            </ul> -->
+            </ul>
           </div>
           <div class="row row-10 m-0">
             <div class="col-2">
