--- a/index.html
+++ b/index.html
@@ -18,21 +18,39 @@
 
       <div class="container-fluid p-0 pages-site home-page" id="home-page">
         <div>
-          <div class="container-fluid row-2">
-            <ul class="menu-nav col des-menu">
-              <li class="menu-items"><a href="#home-page">Home</a></li>
-              <li class="menu-items"><a href="#about-page">About me</a></li>
-              <li class="menu-items"><a href="#service-page">My service</a></li>
-              <li class="menu-items"><a href="#skills-page">My skills</a></li>
-              <li class="menu-items"><a href="#contact-page">Contact me</a></li>
-            </ul>
-            <ul class="menu-nav col mobile-menu">
-              <div class="ham-menu">
-                <span></span>
-                <span></span>
-                <span></span>
+          <div class="container-fluid row-2 ss">
+            <nav class="navbar navbar-expand-md navbar-dark p-lg-4 fixed-top">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="#">MoeinG.ir</a>
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapsibleNavbar"
+                >
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link" href="#home-page">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#about-page">About me</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#service-page">My service</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#skills-page">My skills</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#contact-page">Contact me</a>
+                    </li>
+                  </ul>
+                </div>
               </div>
-            </ul>
+            </nav>
           </div>
           <div class="row row-10 m-0">
             <div class="col-2">
