--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <div class="container-fluid p-0 pages-site home-page" id="home-page">
         <div>
           <div class="container-fluid row-2 ss">
-            <nav class="navbar navbar-expand-md navbar-dark p-lg-4 fixed-top">
+            <nav
+              id="navbar"
+              class="navbar navbar-expand-md navbar-dark p-lg-4 fixed-top"
+            >
               <div class="container-fluid">
                 <a class="navbar-brand" href="#">MoeinG.ir</a>
                 <button
