--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <div class="container-fluid p-0 body-site">
@@ -24,7 +25,7 @@
               class="navbar navbar-expand-md navbar-dark p-lg-4 fixed-top"
             >
               <div class="container-fluid">
-                <a class="navbar-brand" href="#">MoeinG.ir</a>
+                <a class="navbar-brand" href="moeing.ir">MoeinG.ir</a>
                 <button
                   class="navbar-toggler"
                   type="button"
@@ -55,7 +56,7 @@
               </div>
             </nav>
           </div>
-          <div class="row row-10 m-0">
+          <div class="row m-0">
             <div class="col-2">
               <div class="progress-side"></div>
             </div>
@@ -125,6 +126,34 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="styles/main.css" />
+    <script
+      type="text/javascript"
+      src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"
+    ></script>
+    <script>
+      $(function () {
+        $("a[href*=#]:not([href=#])").click(function () {
+          if (
+            location.pathname.replace(/^\//, "") ==
+              this.pathname.replace(/^\//, "") &&
+            location.hostname == this.hostname
+          ) {
+            var target = $(this.hash);
+            target = target.length
+              ? target
+              : $("[name=" + this.hash.slice(1) + "]");
+            if (target.length) {
+              $("html,body").animate(
+                {
+                  scrollTop: target.offset().top,
+                },
+                1000
+              );
+              return false;
+            }
+          }
+        });
+      });
+    </script>
   </body>
 </html>
