Add section home and about me

--- a/index.html
+++ b/index.html
@@ -60,7 +60,14 @@
             <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-10"></div>
+            <div class="col-10 d-flex justify-content-center flex-column">
+              <h1 class="text-light home-name">Moein Mirsaeedi</h1>
+              <p class="home-about-me">
+                Programmer , Web designer, <br />
+                Graphic designer and... <br />
+                <span>call me: 09056249543</span>
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -72,7 +79,41 @@
             <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-10"></div>
+            <div class="col-10 d-flex justify-content-center flex-column">
+              <h2 class="about-title">About <span>me</span></h2>
+              <br /><br /><br />
+              <p class="about-text">
+                My name is <span>Moein Mirsaeedi</span>
+                <br />
+                I'm <span>Programmer</span>, <span>Web designer</span> ,
+                <span>Graphic designer</span> ,
+                <br />
+                <span>Editor</span> and... <br />
+
+                see my
+
+                <a
+                  href="https://github.com/Moein0Mirsaeedi"
+                  class="btn btn-outline-warning"
+                  role="button"
+                  >Github</a
+                >
+
+                <br /><br />
+
+                My sport are <span>Calisthenics</span> and
+                <span>kickboxing</span>
+                <br />
+                see my
+
+                <a
+                  href="https://instagram.com/moein_mirsaeedi"
+                  class="btn btn-outline-warning"
+                  role="button"
+                  >instagram</a
+                >
+              </p>
+            </div>
           </div>
         </div>
       </div>
