add section my service

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
               <p class="about-text">
                 My name is <span>Moein Mirsaeedi</span>
                 <br />
+                I'm living in Mashhad
+                <br /><br />
                 I'm <span>Programmer</span>, <span>Web designer</span> ,
                 <span>Graphic designer</span> ,
                 <br />
@@ -128,7 +130,35 @@
             <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-10"></div>
+            <div class="col-10 d-flex justify-content-center flex-column">
+              <h2 class="about-title"><span>My</span> service</h2>
+              <br /><br /><br />
+              <div class="row">
+                <div class="col col-12 col-md-6 service-text">
+                  <p>
+                    Designing all types of site.
+                    <br />
+                    Doing graphic work.
+                    <br />
+                    Programming projects.
+                    <br />
+                    Video and photo editing.
+                    <br />
+                    advertising and SEO.
+                    <br />
+                    Teaching programming , web designing.
+                    <br />
+                    Teaching computer concepts.
+                  </p>
+                </div>
+                <div class="col col-12 col-md-6 service-text border-left">
+                  <p>
+                    Software and hardware problems.
+                    <br />
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
