--- a/index.html
+++ b/index.html
@@ -131,31 +131,30 @@
               <div class="progress-side"></div>
             </div>
             <div class="col-10 d-flex justify-content-center flex-column">
-              <h2 class="about-title"><span>My</span> service</h2>
+              <h2 class="service-title"><span>My</span> service</h2>
               <br /><br /><br />
-              <div class="row">
+              <div class="row border-left-1">
                 <div class="col col-12 col-md-6 service-text">
-                  <p>
+                  <span>
                     Designing all types of site.
-                    <br />
-                    Doing graphic work.
                     <br />
                     Programming projects.
                     <br />
-                    Video and photo editing.
-                    <br />
+                    <hr />
                     advertising and SEO.
                     <br />
+                    Doing graphic work.
+                    <br />
+                    Video and photo editing.
+                    <br />
+                    <hr />
                     Teaching programming , web designing.
                     <br />
                     Teaching computer concepts.
-                  </p>
+                  </span>
                 </div>
                 <div class="col col-12 col-md-6 service-text border-left">
-                  <p>
-                    Software and hardware problems.
-                    <br />
-                  </p>
+                  <p>Software and hardware problems.</p>
                 </div>
               </div>
             </div>
@@ -170,7 +169,100 @@
             <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-10"></div>
+            <div class="col-10">
+              <h2 class="skills-title"><span>My</span> skills</h2>
+              <br /><br /><br />
+              <div class="row border-left-1">
+                <div class="col col-12 col-md-6 skills-text">
+                  <span>
+                    <span class="i">Web design</span>
+                    <div class="progress">
+                      <div
+                        class="progress-bar progress-bar-warning"
+                        role="progressbar"
+                        aria-valuenow="100"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                        style="width: 90%"
+                      >
+                        90% Complete
+                      </div>
+                    </div>
+                    Html, Css
+                    <br />
+                    Bootstrap , Sass
+                    <br />
+                    <br />
+                    <hr />
+
+                    <span class="i">Programming</span>
+                    <div class="progress">
+                      <div
+                        class="progress-bar progress-bar-warning"
+                        role="progressbar"
+                        aria-valuenow="100"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                        style="width: 50%"
+                      >
+                        50% Complete
+                      </div>
+                    </div>
+
+                    JavaScript
+                    <br />
+                    JQuery
+                    <br />
+                    <br />
+                    <hr />
+
+                    <span class="i">General skills</span>
+                    <div class="progress">
+                      <div
+                        class="progress-bar progress-bar-warning"
+                        role="progressbar"
+                        aria-valuenow="100"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                        style="width: 90%"
+                      >
+                        90% Complete
+                      </div>
+                    </div>
+
+                    Git , Github
+                  </span>
+                </div>
+                <div
+                  class="col col-12 col-md-6 skills-text border-left padding-left"
+                >
+                  <span>
+                    <span class="i">Editing</span>
+                    <div class="progress">
+                      <div
+                        class="progress-bar progress-bar-warning"
+                        role="progressbar"
+                        aria-valuenow="100"
+                        aria-valuemin="0"
+                        aria-valuemax="100"
+                        style="width: 50%"
+                      >
+                        50% Complete
+                      </div>
+                    </div>
+
+                    Photoshop
+                    <br />
+                    Pixellab
+                    <br />
+                    Figma
+                    <br />
+                    <br />
+                    <hr />
+                  </span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
