Update, better responsive

--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
             <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-10">
+            <div class="col-10 d-flex justify-content-center flex-column">
               <h2 class="skills-title"><span>My</span> skills</h2>
-              <br /><br /><br />
-              <div class="row border-left-1">
+              <br /><br />
+              <div class="row border-left-1 padding-left">
                 <div class="col col-12 col-md-6 skills-text">
                   <span>
                     <span class="i">Web design</span>
@@ -192,7 +192,7 @@
                     <br />
                     Bootstrap , Sass
                     <br />
-                    <br />
+
                     <hr />
 
                     <span class="i">Programming</span>
@@ -213,7 +213,7 @@
                     <br />
                     JQuery
                     <br />
-                    <br />
+
                     <hr />
 
                     <span class="i">General skills</span>
@@ -231,10 +231,13 @@
                     </div>
 
                     Git , Github
+                    <br />
+
+                    <hr />
                   </span>
                 </div>
                 <div
-                  class="col col-12 col-md-6 skills-text border-left padding-left"
+                  class="col col-12 col-md-6 skills-text border-left padding-left-1"
                 >
                   <span>
                     <span class="i">Editing</span>
@@ -257,7 +260,7 @@
                     <br />
                     Figma
                     <br />
-                    <br />
+
                     <hr />
                   </span>
                 </div>
@@ -277,7 +280,34 @@
             <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-10"></div>
+            <div class="col-10 d-flex justify-content-center flex-column">
+              <h2 class="service-title"><span>My</span> service</h2>
+              <br /><br /><br />
+              <div class="row border-left-1">
+                <div class="col col-12 col-md-6 service-text">
+                  <span>
+                    Designing all types of site.
+                    <br />
+                    Programming projects.
+                    <br />
+                    <hr />
+                    advertising and SEO.
+                    <br />
+                    Doing graphic work.
+                    <br />
+                    Video and photo editing.
+                    <br />
+                    <hr />
+                    Teaching programming , web designing.
+                    <br />
+                    Teaching computer concepts.
+                  </span>
+                </div>
+                <div class="col col-12 col-md-6 service-text border-left">
+                  <p>Software and hardware problems.</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
