Add section contact me

--- a/index.html
+++ b/index.html
@@ -281,30 +281,35 @@
               <div class="progress-side"></div>
             </div>
             <div class="col-10 d-flex justify-content-center flex-column">
-              <h2 class="service-title"><span>My</span> service</h2>
-              <br /><br /><br />
+              <h2 class="contact-title">Contact <span>me</span></h2>
+              <br /><br />
               <div class="row border-left-1">
-                <div class="col col-12 col-md-6 service-text">
+                <div class="col col-12 col-md-6 contact-text">
+                  <br />
                   <span>
-                    Designing all types of site.
-                    <br />
-                    Programming projects.
-                    <br />
+                    Phone: 09056249543
                     <hr />
-                    advertising and SEO.
-                    <br />
-                    Doing graphic work.
-                    <br />
-                    Video and photo editing.
-                    <br />
+                    Email:MoeinGIR@moeing.ir
                     <hr />
-                    Teaching programming , web designing.
-                    <br />
-                    Teaching computer concepts.
+                    Social media: MoeingIR
+                    <hr />
+                    Github: Moein0Mirsaeedi
+                    <hr />
+                    Website: Moeing.ir
                   </span>
+                  <br /><br /><br />
                 </div>
-                <div class="col col-12 col-md-6 service-text border-left">
-                  <p>Software and hardware problems.</p>
+                <div
+                  class="col col-12 col-md-6 service-text border-left d-flex align-items-center"
+                >
+                  <a class="download-cart" href="images/CartInfoM.png" download>
+                    <img
+                      class="w-100"
+                      src="images/CartInfoM.png"
+                      alt="Moein Mirsaeedi | معین میرسعیدی"
+                    />
+                    <p class="text-center text-light">Click for download</p>
+                  </a>
                 </div>
               </div>
             </div>
