Update colors , fixed problem

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-10 d-flex justify-content-center flex-column">
+            <div class="col-10 d-flex justify-content-center flex-column pb-5">
               <h2 class="about-title">About <span>me</span></h2>
-              <br /><br /><br />
+              <br /><br />
               <p class="about-text">
                 My name is <span>Moein Mirsaeedi</span>
                 <br />
@@ -130,10 +130,10 @@
             <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-10 d-flex justify-content-center flex-column">
+            <div class="col-10 d-flex justify-content-center flex-column pb-5">
               <h2 class="service-title"><span>My</span> service</h2>
               <br /><br /><br />
-              <div class="row border-left-1">
+              <div class="row border-left-1 mb-5">
                 <div class="col col-12 col-md-6 service-text">
                   <span>
                     Designing all types of site.
