Add change language, change color1

--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
               <div class="container-fluid">
                 <a class="navbar-brand" href="moeing.ir">MoeinG.ir</a>
                 <button
+                  type="button"
+                  class="changeLan btn btn-warning ms-auto me-2 d-md-none d-block"
+                  data-toggle="button"
+                  aria-pressed="false"
+                  autocomplete="off"
+                  id="changeLan"
+                >
+                  FA
+                </button>
+                <button
                   class="navbar-toggler"
                   type="button"
                   data-bs-toggle="collapse"
@@ -34,8 +44,9 @@
                 >
                   <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                  <ul class="navbar-nav">
+                  <ul class="navbar-nav w-100">
                     <li class="nav-item">
                       <a class="nav-link" href="#home-page">Home</a>
                     </li>
@@ -53,6 +64,16 @@
                     </li>
                   </ul>
                 </div>
+                <button
+                  type="button"
+                  class="changeLan btn btn-warning ms-auto me-2 d-md-block d-none"
+                  data-toggle="button"
+                  aria-pressed="false"
+                  autocomplete="off"
+                  id="changeLan"
+                >
+                  FA
+                </button>
               </div>
             </nav>
           </div>
