Add two language for site and add bootstrap files

--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>معین میرسعیدی | Moein Mirsaeedi</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
+    <link href="styles/bootstrap.css" rel="stylesheet" />
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
@@ -28,7 +23,7 @@
                 <a class="navbar-brand" href="moeing.ir">MoeinG.ir</a>
                 <button
                   type="button"
-                  class="changeLan btn btn-warning ms-auto me-2 d-md-none d-block"
+                  class="changeLan changeLan2 btn btn-warning ms-auto me-2 d-md-none d-block"
                   data-toggle="button"
                   aria-pressed="false"
                   autocomplete="off"
@@ -66,7 +61,7 @@
                 </div>
                 <button
                   type="button"
-                  class="changeLan btn btn-warning ms-auto me-2 d-md-block d-none"
+                  class="changeLan changeLan1 btn btn-warning ms-auto me-2 d-md-block d-none"
                   data-toggle="button"
                   aria-pressed="false"
                   autocomplete="off"
@@ -100,14 +95,15 @@
             <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-10 d-flex justify-content-center flex-column pb-5">
+            <div
+              class="col-10 d-flex justify-content-center flex-column pb-5 about-lan-site"
+            >
               <h2 class="about-title">About <span>me</span></h2>
               <br /><br />
               <p class="about-text">
-                My name is <span>Moein Mirsaeedi</span>
+                My name is <span>Moein</span> <br /><br />
+                I have been working in web design for two years
                 <br />
-                I'm living in Mashhad
-                <br /><br />
                 I'm <span>Programmer</span>, <span>Web designer</span> ,
                 <span>Graphic designer</span> ,
                 <br />
@@ -151,7 +147,9 @@
             <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-10 d-flex justify-content-center flex-column pb-5">
+            <div
+              class="col-10 d-flex justify-content-center flex-column pb-5 service-lan-site"
+            >
               <h2 class="service-title"><span>My</span> service</h2>
               <br /><br /><br />
               <div class="row border-left-1 mb-5">
@@ -190,7 +188,9 @@
             <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-10 d-flex justify-content-center flex-column">
+            <div
+              class="col-10 d-flex justify-content-center flex-column skills-lan-site"
+            >
               <h2 class="skills-title"><span>My</span> skills</h2>
               <br /><br />
               <div class="row border-left-1 padding-left">
@@ -301,7 +301,9 @@
             <div class="col-2">
               <div class="progress-side"></div>
             </div>
-            <div class="col-10 d-flex justify-content-center flex-column">
+            <div
+              class="col-10 d-flex justify-content-center flex-column contact-lan-site"
+            >
               <h2 class="contact-title">Contact <span>me</span></h2>
               <br /><br />
               <div class="row border-left-1">
@@ -310,7 +312,7 @@
                   <span>
                     Phone: 09056249543
                     <hr />
-                    Email:MoeinGIR@moeing.ir
+                    Email: MoeinGIR@moeing.ir
                     <hr />
                     Social media: MoeingIR
                     <hr />
@@ -340,11 +342,7 @@
     </div>
 
     <script src="scripts/main.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
+    <script src="scripts/bootstrap.js"></script>
     <script
       type="text/javascript"
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"
