Add meta tag and seo

--- a/index.html
+++ b/index.html
@@ -4,13 +4,32 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="معین میرسعیدی | Moein Mirsaeedi" />
+    <meta
+      name="description"
+      content="معین میرسعیدی | Moein Mirsaeedi ... برنامه نویس و طراح وب"
+    />
+    <meta
+      name="keywords"
+      content="معین , میرسعیدی , معین میرسعیدی , Moein , Mirsaeedi , Moein Mirsaeedi , طراحی وب , برنامه نویسی"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="1 days" />
+    <meta name="author" content="" />
+    <meta
+      name="google-site-verification"
+      content="t5pSdzk-hQj83s5F2Yx8ensyBcA8m4AU_eIWwH28o5k"
+    />
+
     <title>معین میرسعیدی | Moein Mirsaeedi</title>
     <link href="styles/bootstrap.css" rel="stylesheet" />
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
     <div class="container-fluid p-0 body-site">
-      <!-- Home page --------->
+      <!-- Home page -->
 
       <div class="container-fluid p-0 pages-site home-page" id="home-page">
         <div>
@@ -88,7 +107,7 @@
         </div>
       </div>
 
-      <!-- About me page --------->
+      <!-- About me page -->
       <div class="container-fluid p-0 pages-site about-page" id="about-page">
         <div>
           <div class="row m-0">
@@ -137,7 +156,7 @@
         </div>
       </div>
 
-      <!-- My service page --------->
+      <!-- My service page -->
       <div
         class="container-fluid p-0 pages-site service-page"
         id="service-page"
@@ -181,7 +200,7 @@
         </div>
       </div>
 
-      <!-- My skills page --------->
+      <!-- My skills page -->
       <div class="container-fluid p-0 pages-site skills-page" id="skills-page">
         <div>
           <div class="row m-0">
@@ -291,7 +310,7 @@
         </div>
       </div>
 
-      <!-- Contact me page --------->
+      <!-- Contact me page -->
       <div
         class="container-fluid p-0 pages-site contact-page"
         id="contact-page"
@@ -371,6 +390,16 @@
           }
         });
       });
+    </script>
+    <!-- Google tag (gtag.js) -->
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-CBJB2L7W5P");
     </script>
   </body>
 </html>
