--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
   <body>
     <div class="container-fluid p-0 body-site">
       <!-- Home page -->
+      <h1 class="hide">
+        معین میرسعیدی Moein Mirsaeedi طراح وب و برنامه نویس moeing moein g
+      </h1>
+      <h1 class="hide">Moein Mirsaeedi</h1>
+      <h1 class="hide">معین میرسعیدی</h1>
+      <h1 class="hide">محمد معین میرسعیدی Mohammad moein mirsaeedi</h1>
 
       <div class="container-fluid p-0 pages-site home-page" id="home-page">
         <div>
@@ -359,6 +365,13 @@
         </div>
       </div>
     </div>
+
+    <h1 class="hide">
+      معین میرسعیدی Moein Mirsaeedi طراح وب و برنامه نویس moeing moein g
+    </h1>
+    <h1 class="hide">Moein Mirsaeedi</h1>
+    <h1 class="hide">معین میرسعیدی</h1>
+    <h1 class="hide">محمد معین میرسعیدی Mohammad moein mirsaeedi</h1>
 
     <script src="scripts/main.js"></script>
     <script src="scripts/bootstrap.js"></script>
