Change name file , styles update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <title>معین میرسعیدی | Moein Mirsaeedi</title>
     <link href="styles/bootstrap.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/main10.css" />
   </head>
   <body>
     <div class="container-fluid p-0 body-site">
@@ -45,7 +45,7 @@
               class="navbar navbar-expand-md navbar-dark p-lg-4 fixed-top"
             >
               <div class="container-fluid">
-                <a class="navbar-brand" href="moeing.ir">MoeinG.ir</a>
+                <a class="navbar-brand" href="https://moeing.ir">MoeinG.ir</a>
                 <button
                   type="button"
                   class="changeLan changeLan2 btn btn-warning ms-auto me-2 d-md-none d-block"
@@ -373,7 +373,7 @@
     <h1 class="hide">معین میرسعیدی</h1>
     <h1 class="hide">محمد معین میرسعیدی Mohammad moein mirsaeedi</h1>
 
-    <script src="scripts/main.js"></script>
+    <script src="scripts/main10.js"></script>
     <script src="scripts/bootstrap.js"></script>
     <script
       type="text/javascript"
@@ -403,16 +403,6 @@
           }
         });
       });
-    </script>
-    <!-- Google tag (gtag.js) -->
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-CBJB2L7W5P");
     </script>
   </body>
 </html>
