Change name file , Update Index.html

--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
 
     <title>معین میرسعیدی | Moein Mirsaeedi</title>
     <link href="styles/bootstrap.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles/main10.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
     <div class="container-fluid p-0 body-site">
-      <!-- Home page -->
       <h1 class="hide">
         معین میرسعیدی Moein Mirsaeedi طراح وب و برنامه نویس moeing moein g
       </h1>
-      <h1 class="hide">Moein Mirsaeedi</h1>
-      <h1 class="hide">معین میرسعیدی</h1>
-      <h1 class="hide">محمد معین میرسعیدی Mohammad moein mirsaeedi</h1>
+      <h2 class="hide">Moein Mirsaeedi</h2>
+      <h2 class="hide">معین میرسعیدی</h2>
+      <h2 class="hide">محمد معین میرسعیدی Mohammad moein mirsaeedi</h2>
 
+      <!-- Home page -->
       <div class="container-fluid p-0 pages-site home-page" id="home-page">
         <div>
           <div class="container-fluid row-2 ss">
@@ -364,16 +364,16 @@
           </div>
         </div>
       </div>
+
+      <h2 class="hide">
+        معین میرسعیدی Moein Mirsaeedi طراح وب و برنامه نویس moeing moein g
+      </h2>
+      <h2 class="hide">Moein Mirsaeedi</h2>
+      <h2 class="hide">معین میرسعیدی</h2>
+      <h2 class="hide">محمد معین میرسعیدی Mohammad moein mirsaeedi</h2>
     </div>
 
-    <h1 class="hide">
-      معین میرسعیدی Moein Mirsaeedi طراح وب و برنامه نویس moeing moein g
-    </h1>
-    <h1 class="hide">Moein Mirsaeedi</h1>
-    <h1 class="hide">معین میرسعیدی</h1>
-    <h1 class="hide">محمد معین میرسعیدی Mohammad moein mirsaeedi</h1>
-
-    <script src="scripts/main10.js"></script>
+    <script src="scripts/scripts.js"></script>
     <script src="scripts/bootstrap.js"></script>
     <script
       type="text/javascript"
