Update text, Seo

--- a/index.html
+++ b/index.html
@@ -25,17 +25,27 @@
 
     <title>معین میرسعیدی | Moein Mirsaeedi</title>
     <link href="styles/bootstrap.css" rel="stylesheet" />
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/styles1.css" />
   </head>
   <body>
     <div class="container-fluid p-0 body-site">
-      <h1 class="hide">
-        معین میرسعیدی Moein Mirsaeedi طراح وب و برنامه نویس moeing moein g
-      </h1>
-      <h2 class="hide">Moein Mirsaeedi</h2>
-      <h2 class="hide">معین میرسعیدی</h2>
-      <h2 class="hide">محمد معین میرسعیدی Mohammad moein mirsaeedi</h2>
-
+      <div class="S-e-o">
+        <h1 class="hide">
+          معین میرسعیدی Moein Mirsaeedi طراح وب و برنامه نویس moeing moein g
+        </h1>
+        <h2 class="hide">
+          معین میرسعیدی Moein Mirsaeedi طراح وب و برنامه نویس moeing moein g
+        </h2>
+        <h2 class="hide">Moein Mirsaeedi</h2>
+        <h2 class="hide">معین میرسعیدی</h2>
+        <h2 class="hide">محمد معین میرسعیدی Mohammad moein mirsaeedi</h2>
+        <h3 class="hide">Moein Mirsaeedi</h3>
+        <h3 class="hide">معین میرسعیدی</h3>
+        <h3 class="hide">محمد معین میرسعیدی Mohammad moein mirsaeedi</h3>
+        <p class="hide">Moein Mirsaeedi</p>
+        <p class="hide">معین میرسعیدی</p>
+        <p class="hide">محمد معین میرسعیدی Mohammad moein mirsaeedi</p>
+      </div>
       <!-- Home page -->
       <div class="container-fluid p-0 pages-site home-page" id="home-page">
         <div>
@@ -127,12 +137,16 @@
               <br /><br />
               <p class="about-text">
                 My name is <span>Moein</span> <br /><br />
-                I have been working in web design for two years
+                I have been working in <span>web design</span> and
+                <span>programming</span> for two years. <br />
+                I am fluent in
+                <span>Html</span>, <span>CSS</span> and
+                <span>JavaScript</span> languages. <br />
+                I am also proficient in other technologies such as
+                <span>Bootstrap</span>, <span>Git</span>, <span>Sass</span>.
                 <br />
-                I'm <span>Programmer</span>, <span>Web designer</span> ,
-                <span>Graphic designer</span> ,
-                <br />
-                <span>Editor</span> and... <br />
+                Proficient in <span>graphics</span> and
+                <span>editing</span>.<br />
 
                 see my
 
@@ -365,15 +379,23 @@
         </div>
       </div>
 
-      <h2 class="hide">
-        معین میرسعیدی Moein Mirsaeedi طراح وب و برنامه نویس moeing moein g
-      </h2>
-      <h2 class="hide">Moein Mirsaeedi</h2>
-      <h2 class="hide">معین میرسعیدی</h2>
-      <h2 class="hide">محمد معین میرسعیدی Mohammad moein mirsaeedi</h2>
+      <div class="S-e-o">
+        <h2 class="hide">
+          معین میرسعیدی Moein Mirsaeedi طراح وب و برنامه نویس moeing moein g
+        </h2>
+        <h2 class="hide">Moein Mirsaeedi</h2>
+        <h2 class="hide">معین میرسعیدی</h2>
+        <h2 class="hide">محمد معین میرسعیدی Mohammad moein mirsaeedi</h2>
+        <h3 class="hide">Moein Mirsaeedi</h3>
+        <h3 class="hide">معین میرسعیدی</h3>
+        <h3 class="hide">محمد معین میرسعیدی Mohammad moein mirsaeedi</h3>
+        <p class="hide">Moein Mirsaeedi</p>
+        <p class="hide">معین میرسعیدی</p>
+        <p class="hide">محمد معین میرسعیدی Mohammad moein mirsaeedi</p>
+      </div>
     </div>
 
-    <script src="scripts/scripts.js"></script>
+    <script src="scripts/scripts1.js"></script>
     <script src="scripts/bootstrap.js"></script>
     <script
       type="text/javascript"
